minor cleanup of Long conversion